--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
   width: 100%;
   max-width: 100%; }
 
@@ -44,7 +43,10 @@ body {
     right: 0;
     top: 10vh;
     transform: translateX(100rem);
-    transition: all 0.3s; }
+    transition: all 0.3s;
+    height: 0;
+    opacity: 0;
+    overflow: hidden; }
   .nav__item {
     list-style-type: none;
     margin: 2rem;
@@ -58,7 +60,9 @@ body {
       border-bottom: 3px solid #20a4f3; }
 
 .translate {
-  transform: translateX(0); }
+  transform: translateX(0);
+  opacity: 1;
+  height: auto; }
 
 .home {
   height: 90vh;
